@@ -72,7 +72,11 @@ enum LIBFDATETIME_STRING_FORMAT_DEFINITIONS
 
 	/* Format the date time value with a time in nano seconds
 	 */
-	LIBFDATETIME_STRING_FORMAT_FLAG_TIME_NANO_SECONDS	= 0x00040000UL
+	LIBFDATETIME_STRING_FORMAT_FLAG_TIME_NANO_SECONDS	= 0x00040000UL,
+
+	/* Add a timezone indicator
+	 */
+	LIBFDATETIME_STRING_FORMAT_FLAG_TIMEZONE_INDICATOR	= 0x80000000UL,
 };
 
 #define LIBFDATETIME_STRING_FORMAT_FLAG_DATE_TIME \
