@@ -22,6 +22,9 @@ HFS date/time
 Deployment
 * add macosx file
 
+20121021
+* added timezone indicator format flag
+
 20120920
 * updated dependencies
 
